--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -69,29 +69,40 @@
                         <div class="tab-content show-content" data-content="1">
                             <ul class="answered-question">
                                 <li class="list-items answered-question-list">
-                                    <span>answered question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items answered-question-list">
-                                    <span>answered question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items answered-question-list">
-                                    <span>answered question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items answered-question-list">
-                                    <span>answered question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
+<!--                                test-->
                                 <li class="list-items answered-question-list">
-                                    <span>answered question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -100,19 +111,25 @@
                         <div class="tab-content" data-content="2">
                             <ul class="list-questions">
                                 <li class="list-items user-question-list">
-                                    <span>user question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items user-question-list">
-                                    <span>user question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items user-question-list">
-                                    <span>user question</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -121,24 +138,32 @@
                         <div class="tab-content" data-content="3">
                             <ul class="list-tips">
                                 <li class="list-items user-tip-list">
-                                    <span>user tip</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items user-tip-list">
-                                    <span>user tip</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items user-tip-list">
-                                    <span>user tip</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                                 <li class="list-items user-tip-list">
-                                    <span>user tip</span>
-                                    <button>edit</button>
-                                    <button>delete</button>
+                                    <div>answered question</div>
+                                    <div>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
