--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -10,20 +10,29 @@
         <nav th:replace="~{partials/venued_partials :: mynav}"></nav>
 
         <section class="main-wrapper">
+            <!----- row wrapper starts here ----->
             <div class="row-wrapper">
+
+                <!---- first column wrapper starts here ------>
                 <div class="first-card-wrapper">
+
+                    <!--- profile picture starts here ---->
                     <div class="avatar-container">
-                        <p>
-                            <img src="../imgs/avatar-image.png" alt="user-image">
-                        </p>
-<!--                        <form action="">-->
-<!--                            <input type="file" name="user-image" value="">-->
-<!--                        </form>-->
+                        <div class="picture-container">
+                            <div class="picture">
+                                <img src="../imgs/avatar-image.png" class="picture-src" id="wizardPicturePreview" title="">
+                                <input type="file" id="wizard-picture" class="">
+                            </div>
+                            <h6 class="">Upload Photo</h6>
+                        </div>
                         <p>user name goes here...</p>
                         <div class="edit-btn-container">
                             <button class="edit-btn">Edit Profile</button>
                         </div>
                     </div>
+                    <!----- profile picture ends here ---->
+
+                    <!---- profile form starts here ------>
                     <div class="form-container">
                         <form class="form" action="#" method="#">
                             <div>
@@ -40,9 +49,16 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                    <!----- profile form ends here -------->
 
+                </div>
+                <!--------- first column wrapper end here ------>
+
+
+                <!---- second column wrapper starts here ------->
                 <div class="second-card-wrapper">
+
+                    <!---- list of all tabs start here ------>
                     <ul class="lists-wrapper" id="myTab">
                         <li class="list-item">
                             <button class="tab-btn active" id="answer-tab" data-content="1">
@@ -63,9 +79,11 @@
                             </button>
                         </li>
                     </ul>
+                    <!------ list of all tabs end here ------->
 
+                    <!------ tab content wrapper start here ---->
                     <div id="TabContents">
-                        <!-- first card begins here -->
+                        <!-- first tab content card begins here -->
                         <div class="tab-content show-content" data-content="1">
                             <ul class="answered-question">
                                 <li class="list-items answered-question-list">
@@ -106,8 +124,9 @@
                                 </li>
                             </ul>
                         </div>
+                        <!----- first tab content card end here ------>
 
-                        <!-- second card begins here -->
+                        <!-- second tab content card begins here -->
                         <div class="tab-content" data-content="2">
                             <ul class="list-questions">
                                 <li class="list-items user-question-list">
@@ -133,8 +152,9 @@
                                 </li>
                             </ul>
                         </div>
+                        <!----- second tab content card end here ----->
 
-                        <!-- third card begins here -->
+                        <!-- third tab content card begins here -->
                         <div class="tab-content" data-content="3">
                             <ul class="list-tips">
                                 <li class="list-items user-tip-list">
@@ -167,8 +187,10 @@
                                 </li>
                             </ul>
                         </div>
+                        <!---- third tab content card end here ----->
 
                     </div>
+                    <!---- tab content wrapper end here ----->
                 </div>
             </div>
         </section>
