--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -16,9 +16,9 @@
         <main>
             <div class="form-wrapper">
                 <p class="text-center mb-4" id="form-title" th:class="title">Sign Up</p>
-                <form th:action="@{/users/register}" th:method="post" class="w-100 mx-auto" th:object="${user}">
+                <form th:action="@{/register}" th:method="post" class="w-100 mx-auto" th:object="${user}">
                     <div class="w-100 mb-4">
-                        <input id="username" name="username" type="text" class="form-control w-100 shadow-none" autocomplete="off" placeholder="Username" th:field="*{userName}">
+                        <input id="username" name="username" type="text" class="form-control w-100 shadow-none" autocomplete="off" placeholder="Username" th:field="*{username}">
                     </div>
                     <div class="w-100 mb-4">
                         <input id="email" name="email" type="email" class="form-control w-100 shadow-none" autocomplete="off" placeholder="Email" th:field="*{email}">
