fixing the meta tags for the site

--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -25,6 +25,12 @@
 			<meta property="og:url" content="https://venued.us" />
 			<meta property="og:image" content="/imgs/socialMedia.png" />
 			
+			<meta property="og:description" content="
+					Venued is an informative platform that encourages concert veterans
+					 to submit tips that rookies can use, such as finding the closest,
+			         affordable parking spots, how early to get to the venue depending
+			         on the artist, which restaurants are good, and much more!">
+			
 			<meta name="description" content="
 					Venued is an informative platform that encourages concert veterans
 					 to submit tips that rookies can use, such as finding the closest,
