--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -11,19 +11,20 @@
 			<title th:text="${title}"></title>
 
 			<meta charset="UTF-8">
-			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+			
 			<!--meta tags for responsiveness-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 			
 			<!--meta tags for anti robots-->
-			<meta name="robots" content="noindex" />
-			<meta name="robots" content="noindex"/>
+			<meta name="robots" content="noindex" >
+			<meta name="robots" content="noindex">
 			
 			<!--meta tags for social media-->
-			<meta property="og:title" content="Venued.us" />
-			<meta property="og:type" content="SocialMedia" />
-			<meta property="og:url" content="https://venued.us" />
-			<meta property="og:image" content="/imgs/socialMedia.png" />
+			<meta property="og:title" content="Venued.us">
+			<meta property="og:type" content="SocialMedia">
+			<meta property="og:url" content="https://venued.us">
+			<meta property="og:image" content="/imgs/socialMedia.png">
 			
 			<meta property="og:description" content="
 					Venued is an informative platform that encourages concert veterans
@@ -39,7 +40,7 @@
 
 			<!--custom navbar css-->
 			<link rel="stylesheet" th:href="@{/css/navbar.css}">
-			<link rel="stylesheet" th:href="@{/css/navbarResponsiveness}">
+			<link rel="stylesheet" th:href="@{/css/navbarResponsiveness.css}">
 			
 			<!--custom footer css-->
 			<link rel="stylesheet" th:href="@{/css/footer.css}">
@@ -48,7 +49,10 @@
 			<link rel="stylesheet" th:href="@{/css/universalStyle.css}">
 
 			<!--bootstrap css cdns-->
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+			      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			      crossorigin="anonymous">
+			
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
 
 			<!--bootstrap js cdn-->
