--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -27,7 +27,7 @@
                                 <img th:src="${user.getImgPath()}" id="wizardPicturePreview" alt="user image">
                             </div>
 
-                            <form action="/fileupload" method="post" enctype="multipart/form-data">
+                            <form action="/fileupload" method="post" enctype="multipart/form-data" >
 
                                 <div>
                                     <input type="file" name="file" id="wizard-picture" class="">
@@ -39,7 +39,7 @@
 
                             </form>
                         </div>
-                        <p>user name goes here...</p>
+                        <p th:text="${user.name}"><span></span></p>
                         <div class="edit-btn-container">
                             <button class="edit-btn">Edit Profile</button>
                         </div>
@@ -48,14 +48,14 @@
 
                     <!---- profile form starts here ------>
                     <div class="form-container">
-                        <form class="form" action="#" method="#">
+                        <form class="form" th:action="@{/user-info}" th:method="post" th:object="${user}">
                             <div>
                                <label for="name">Name</label>
-                               <input type="text" name="name" id="name">
+                               <input type="text" name="name" id="name" th:field="*{name}">
                             </div>
                             <div>
                                <label for="bio">Bio</label>
-                               <textarea name="bio" id="bio" cols="30" rows="5" placeholder="Add a bio..."></textarea>
+                               <textarea name="bio" id="bio" cols="30" rows="5" placeholder="Add a bio..." th:field="*{bio}"></textarea>
                             </div>
                             <div>
                                 <input type="submit" value="Save" name="submit" id="submit-btn">
