--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -39,7 +39,7 @@
 
                             </form>
                         </div>
-                        <p th:text="${user.name}"><span></span></p>
+                        <p th:text="${user.getName()}"><span></span></p>
                         <div class="edit-btn-container">
                             <button class="edit-btn">Edit Profile</button>
                         </div>
