--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -378,5 +378,15 @@
 <!--    <script src="/js/events.js"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script th:src="@{/js/venue.js}"></script>
+  
+  <div sec:authorize="isAuthenticated()">
+	  
+	  <script th:inline="javascript">
+		  //using user object to full the image path variable
+		  let userProfileLink = [[${user.getImgPath()}]];
+		  $(".nav-user-image").attr("src", userProfileLink);
+	  </script>
+
+  </div>
 </body>
 </html>
