userController and profile page modified

--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -39,8 +39,10 @@
 
                             </form>
                         </div>
-                        <p th:text="${user.name}"><span></span></p>
-                        <p th:text="${user.bio}"></p>
+                        <div>
+                            <p th:text="${user.name}"></p>
+                            <p th:text="${user.bio}"></p>
+                        </div>
                         <div class="edit-btn-container">
                             <button class="edit-btn">Edit Profile</button>
                         </div>
@@ -52,11 +54,11 @@
                         <form class="form" th:action="@{/user-info}" th:method="post" th:object="${user}">
                             <div>
                                <label for="name">Name</label>
-                               <input type="text" id="name" th:field="*{name}">
+                               <input type="text" name="name" id="name" th:field="*{name}">
                             </div>
                             <div>
                                <label for="bio">Bio</label>
-                               <textarea id="bio" cols="30" rows="5" placeholder="Add a bio..." th:field="*{bio}"></textarea>
+                               <textarea id="bio" cols="30" name="bio" rows="5" placeholder="Add a bio..." th:field="*{bio}"></textarea>
                             </div>
                             <div>
                                 <input type="submit" value="Save" name="submit" id="submit-btn">
