--- a/src/main/resources/static/css/venue_pages/venue.css
+++ b/src/main/resources/static/css/venue_pages/venue.css
@@ -3,15 +3,17 @@ main {
     font-size: 1.2rem;
 }
 
-h2, h3 {
+h1 {
     text-align: center;
     color: #fff;
     font-family: inherit;
+    font-size: 2.4rem;
 }
 
-.image {
-    width: 85%;
+.hero-image {
+    width: 100%;
     border-radius: 10px;
+    height: 500px;
 }
 
 .wrapper {
@@ -23,13 +25,11 @@ h2, h3 {
 .header-wrapper {
     background-color: rgba(0, 0, 0, 0.4);
     padding: 1rem;
-    height: 75vh;
 }
 
 .hero-card {
     margin: 0 auto 2.5rem;
     border-radius: 10px;
-    height: 100%;
     overflow: hidden;
 }
 
@@ -39,41 +39,39 @@ h2, h3 {
 }
 
 .event-container {
-    width: 90%;
-    height: 60%;
+    min-height: 60%;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 1.5rem;
     border-radius: 10px;
 }
 
-.event-container div:nth-child(2) {
+.event-container div:first-child {
     width: 100%;
     margin: 0 auto;
-}
-
-.event-container div:nth-child(2) img {
-    margin-bottom: 1rem;
 }
 
 .desc {
     color: #fff;
     text-align: center;
+    font-size: 1.2rem;
 }
 
 .venue-address {
     margin-top: 1rem;
 }
 
-/*---------- header mobile style ------ */
+/*---------- header bigger screen style ------ */
 @media screen and (min-width: 700px) {
     .header-wrapper {
         display: flex;
+        align-items: center;
         padding: 2.5rem;
     }
 
     .hero-card {
         width: 55%;
+        margin-bottom: 0;
     }
 
     .hero-card > img {
@@ -222,8 +220,6 @@ h2, h3 {
     justify-content: space-between;
     gap: 1rem;
 }
-
-
 
 .upVoteButton, .voteButton {
     background:none;
